feat(search): update search and subscription service implementations